--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-name: "Pianfan's blog"
-description: "翩帆的个人技术博客"
+name: "Plyance's blog"
+description: "Xillonshore blog"
 
-avatar: https://pianfan.github.io/images/avatar.jpg
-favicon: https://pianfan.github.io/images/favicon.ico
+avatar: https://Plyance.github.io/images/avatar.jpg
+favicon: https://Plyance.github.io/images/favicon.ico
 
 navigation:
   - name: 首页
