--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: "Plyance's blog"
 description: "Xillonshore blog"
 
 avatar: https://Plyance.github.io/images/6d8670ec1df1832102bb16b9b6a4599.jpg
-favicon: https://Plyance.github.io/images/favicon.ico
+favicon: https://Plyance.github.io/images/favicon (1).ico
 
 navigation:
   - name: 首页
