--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ excerpt_separator: <!-- more -->
 
 footer-links:
   zhihu: 
-  email: xiongyunhan@outlook.com
+  email: 24110291@bjtu.edu.cn
   facebook:
-  github: pianfan
+  github: plance
   rss: # just type anything here for a working RSS icon
   twitter: 
   youtube:
