--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ footer-links:
   twitter: 
   youtube:
 
-footer-text: Copyright (c) 2024 Pianfan
+footer-text: Copyright (c) 2025 Plyance
 
-url: https://pianfan.github.io
+url: https://Plyance.github.io
 
 permalink: /:title/
 paginate_path: /page:num/
