--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Plyance's blog"
 description: "Xillonshore blog"
 
-avatar: https://Plyance.github.io/images/6d8670ec1df1832102bb16b9b6a4599.jpg
+avatar: https://Plyance.github.io/images/hina.jpg
 favicon: https://Plyance.github.io/images/favicon (1).ico
 
 navigation:
