--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Plyance's blog"
-description: "Xillonshore blog"
+description: "劈开劫数任西东"
 
 avatar: https://Plyance.github.io/images/hina.jpg
 favicon: https://Plyance.github.io/images/favicon (1).ico
