--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer-links:
   zhihu: 
   email: 24110291@bjtu.edu.cn
   facebook:
-  github: plance
+  github: plyance
   rss: # just type anything here for a working RSS icon
   twitter: 
   youtube:
